<resources>
    <string name="app_name">Activity Tracker</string>
    <string name="activity">ACTIVITY</string>
    <string name="slogan">Пожалуй лучший фитнес трекер в ДВФУ</string>
    <string name="created_by_students">Созданный студентами 2-ого курса</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registration_text">Регистрация</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="repeat_password_hint">Повторите пароль</string>
    <string name="nick_or_name_hint">Имя или никнейм</string>
    <string name="gender_hint">Выберите пол</string>
    <string name="button_text_continue">Продолжить</string>
    <string name="user_agreement_p1">Нажимая на кнопку, вы соглашаетесь с </string>
    <string name="user_agreement_p2">политикой конфиденциальности</string>
    <string name="user_agreement_p3"> и обработки персональных данных, а также принимаете </string>
    <string name="user_agreement_p4">пользовательское соглашение</string>
    <string name="user_agreement">Нажимая на кнопку, вы соглашаетесь с
        <a href="#">политикой конфиденциальности</a> и обработки персональных данных
        , а также принимаете <a href="#">пользовательское соглашение</a>
    </string>
    <string name="activity_content_description">ACTIVITY</string>
    <string name="login_text">Вход</string>
    <string name="menu_sport_title">Активность</string>
    <string name="menu_profile">Профиль</string>
    <string name="tab_layout_activity_my">Моя</string>
    <string name="tab_layout_activity_users">Пользователей</string>
    <string name="detailed_toolbar_text">Велосипед</string>
    <string name="detailed_activity_start">Старт</string>
    <string name="detailed_activity_separator">|</string>
    <string name="detailed_activity_end">Финиш</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detailed_activity_action_delete_hint">Удалить активность</string>
    <string name="detailed_activity_action_share_hint">Поделиться</string>
    <string name="comment_hint">Комментарий</string>
    <string name="profile_settings_save">Сохранить</string>
    <string name="change_password">Изменить пароль</string>
    <string name="change_password_old">Старый пароль</string>
    <string name="change_password_new">Новый пароль</string>
    <string name="change_password_repeat">Повторите пороль</string>
    <string name="change_password_accept">Принять</string>
    <string name="exit_button">Выйти</string>
    <string name="change_password_btn">Изменить пароль</string>
    <string name="start_new_activity">Начать</string>
    <string name="new_activity_letsgo">Погнали? :)</string>

</resources>